2013-09-12  Steve Langasek  <steve.langasek@ubuntu.com>

	* configure.ac:
	  - correct the copyright notice.

2013-09-05  James Hunt  <james.hunt@ubuntu.com>

	* util/tests/test_initctl.c: test_quiesce():
	  - Improve kill checks on job processes.
	  - Assert precisely which job processes are expected to be running
	    after the Session Init has exited (particularly important for jobs
	    that 'start on session-end' since they may be running in a System
	    Shutdown scenario).

2013-08-28  James Hunt  <james.hunt@ubuntu.com>

	* util/tests/test_initctl.c: test_quiesce(): Clean up any
	  processes that the Session Init couldn't before it shut down.

2013-08-23  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.10

2013-08-15  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac:
	  - Allow udev bridge to be disabled.
	* extra/Makefile.am:
	  - Ensure source for upstart-udev-bridge is distributed,
	    regardless of whether the local system is able to build it,
	    or has disabled building it.
	  - Add missing DCONF_CFLAGS.
	  - Ensure upstart-dconf-bridge sources are always distributed,
	    regardless of whether the local system is able to build it, or has
	    disabled building it.

2013-08-06  James Hunt  <james.hunt@ubuntu.com>

	* README.tests: Explanation of the tests and how to run them.
	* Makefile.am: Ensure README.tests gets distributed.
	* scripts/tests/__init__.py: Empty file to allow python3's unittest
	  module to auto-discover tests.
	* scripts/Makefile.am: Ensure __init__.py gets distributed.
	* scripts/tests/test_pyupstart_session_init.py: TestSessionUpstart.setUp():
	  Created XDG_RUNTIME_DIR if necessary (for example if running as root).
	* scripts/tests/test_pyupstart_system_init.py: TestSystemUpstart.setUp():
	  Skip test if not running as root rather than asserting.

2013-07-31  James Hunt  <james.hunt@ubuntu.com>

	* init/quiesce.c: quiesce_finalise(): Move cleanup to main()
	  since the NIH main loop may be iterated once more before